src/objects/book__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>books</relationshipLabel>
        <relationshipName>books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>books</relationshipLabel>
        <relationshipName>books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>books</relationshipLabel>
        <relationshipName>books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>books</relationshipLabel>
        <relationshipName>books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>age__c</fullName>
        <label>age</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>author__c</fullName>
        <label>author</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bookimage__c</fullName>
        <formula>IMAGE(&apos;http://earth911.com/wp-content/uploads/2008/10/books.jpg&apos;,&apos;myimage&apos; , 80,80)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>bookimage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dateofbirth__c</fullName>
        <label>dateofbirth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>edition__c</fullName>
        <label>edition</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>exid__c</fullName>
        <externalId>true</externalId>
        <label>exid</label>
        <length>19</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price__c</fullName>
        <label>price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>primary</label>
        <type>Checkbox</type>
    </fields>
    <label>book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>book_name</label>
        <type>Text</type>
    </nameField>
    <namedFilters>
        <fullName>Case_00N90000005j48rEAA</fullName>
        <active>true</active>
        <field>Case.book__c</field>
        <filterItems>
            <field>book__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.Account__c</valueField>
        </filterItems>
        <filterItems>
            <field>book__c.Product__c</field>
            <operation>equals</operation>
            <valueField>$Source.Product2__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
        <name>Case_book</name>
        <sourceObject>Case</sourceObject>
    </namedFilters>
    <pluralLabel>books</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>